--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
+    "axios": "^1.10.0",
+    "express": "^5.1.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-native": "0.80.1"
@@ -26,6 +30,7 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
