--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "express": "^5.1.0",
     "pg": "^8.16.3",
     "react": "19.1.0",
-    "react-native": "0.80.1"
+    "react-native": "0.80.1",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
