--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "name": "fatec-carpool-backend",
   "version": "1.0.0",
   "description": "Backend para sistema de carona Fatec",
@@ -8,12 +8,12 @@
     "start": "node src/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
